--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "npm-run-all --parallel dev:frontend dev:backend",
     "dev:frontend": "vite --open",
     "dev:backend": "convex dev",
-    "lint": "tsc -p convex -noEmit --pretty false && tsc -p . -noEmit --pretty false && convex dev --once && vite build"
+    "lint": "tsc -p convex -noEmit --pretty false && tsc -p . -noEmit --pretty false && convex dev --once && vite build",
+    "build": "npm-run-all --sequential build:backend build:frontend",
+    "build:backend": "convex deploy --skip-browser",
+    "build:frontend": "vite build"
   },
   "dependencies": {
     "@convex-dev/auth": "^0.0.80",
